00000 - added reevaluation logic, dependant logic, reworked original logic, began sperating error reporting and allowing custom error messages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <input data-js-validate="strings" type="text" placeholder="strings" />
 <input data-js-validate="bools" data-js-bool type="text" placeholder="bools" />
 <br />
+<p data-errors-universal></p>
 <!--<input data-js-validate="radio" type="radio" name="group1" data-value="true" />true-->
 <!--<input data-js-validate="radio1" type="radio" name="group1" data-value="false" />false-->
 <br />
