broke our engine rules using babel and es6

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     Validate
 </button>
 
-<script src="../js/jquery-3.3.1.js"></script>
-<script src="../js/baseJs.js"></script>
+<script src="./js/jquery-3.3.1.js"></script>
+<script type="module" src="./js/baseJs.js"></script>
 
 </body>
 </html>
